<resources>
    <string name="app_name">PinballAppMAD155</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="directory">Directory</string>
    <string name="find_location">Find Location</string>
    <string name="play_log">Play Log</string>
    <string name="machine">Machine</string>
    <string name="date">Date Played</string>
    <string name="score">Score</string>
    <string name="save">SAVE</string>
    <string name="title_activity_pinball_directory">PinballDirectory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>